<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    style="@style/llVertical">

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingBottom="12dp"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="30dp">

                    <com.developer.nikhil.fillbelly.view.textview.CustomBlackTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fb"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <com.developer.nikhil.fillbelly.view.textview.CustomRegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fb_enter"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <EditText
                        android:id="@+id/edtEmail"
                        style="@style/edtStyle"
                        android:hint="@string/fb_enter_email"
                        android:padding="10dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:background="@drawable/shape_edt_bg"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <com.developer.nikhil.fillbelly.view.button.CustomBoldButtonView
                        android:id="@+id/btnSubmit"
                        style="@style/btnProfileRounded"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:background="@drawable/shape_btn"
                        android:text="@string/submit"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/ibtnClose"
            style="@style/ibtnClose"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>
</LinearLayout>
