<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/llVertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        app:layout_collapseMode="parallax"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back" />

            <com.developer.nikhil.fillbelly.view.textview.CustomBoldTextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Profile"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/edit_white" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.developer.nikhil.fillbelly.view.textview.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtFname"
                    style="@style/edtStyle"
                    android:layout_marginTop="10dp"
                    android:padding="7dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@drawable/shape_edt_bg"
                    android:hint="@string/first_name"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.developer.nikhil.fillbelly.view.textview.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtLname"
                    style="@style/edtStyle"
                    android:layout_marginTop="10dp"
                    android:padding="7dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@drawable/shape_edt_bg"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/last_name"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.developer.nikhil.fillbelly.view.textview.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/edtStyle"
                    android:layout_marginTop="10dp"
                    android:padding="7dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@drawable/shape_edt_bg"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.developer.nikhil.fillbelly.view.textview.CustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/edtStyle"
                    android:hint="@string/phone"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@drawable/shape_edt_bg"
                    android:layout_marginTop="10dp"
                    android:padding="7dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center">

                <com.developer.nikhil.fillbelly.view.button.CustomBoldButtonView
                    android:id="@+id/btnSave"
                    style="@style/btnProfileRounded"
                    android:background="@drawable/shape_btn"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
